Fix body overflow issue in home page in cc

--- a/css/unimelb_scss.css
+++ b/css/unimelb_scss.css
@@ -1704,6 +1704,9 @@ div.study-area-style {
     div#arts-dropdown-menu li a {
       border-width: 0 !important; }
 
+  div.arts-dropdown div#arts-dropdown-menu.col-6 {
+    width: auto; }
+
   div#arts-dropdown-site-search {
     -moz-border-radius: 0.5em;
     -moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -1732,9 +1735,6 @@ div.study-area-style {
     width: 100%; }
 
   /* Start school site home page two columns */
-  html {
-    overflow-x: hidden; }
-
   body .page-preview {
     width: auto;
     margin-left: 0; }
