--- a/scss/_responsive.scss
+++ b/scss/_responsive.scss
@@ -109,6 +109,11 @@
 		}
 	}
 
+	// Reset
+	div.arts-dropdown div#arts-dropdown-menu.col-6 {
+		width: auto;
+	}
+
 	div#arts-dropdown-site-search {
 		-moz-border-radius: 0.5em;
   	-moz-box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
@@ -147,10 +152,6 @@
 
 	
 	/* Start school site home page two columns */
-	html {
-		overflow-x: hidden;
-	}
-
 	body .page-preview {
 		width: auto;
 		margin-left: 0;
